Refactor http module to improve robustness and to allow more features